--- a/style.css
+++ b/style.css
@@ -1,272 +1,184 @@
-/* defult css */
-*{
-    padding: 0px;
-    margin: 0px;
-    }
-    img{
-        max-width: 100%;
-        max-height: 100%;
-    }
-    div{
-        overflow: hidden;
-        /* box-sizing: border-box; */
-    }
-    /* costom code */
-    .fix{
-        width: 90%;
-        margin: auto;
-        text-align: center;
-    }
-    
-    /* header part css started */
-    header{}
-    /* manu-bar */
-    header .fix .manu-bar{
-        margin-top: 5px;
-    }
-    header .fix .manu-bar ul{}
-    header .fix .manu-bar ul li{
-        display: inline-block;
-        margin-left: 1px;
-    }
-    header .fix .manu-bar ul li a{
-        display: inline-block;
-        text-decoration: none;
-        color: black;
-        background: #48DBFB;
-        padding: 15px 39px;
-        position: relative;
-        font-size: 16px;
-    }
-    /* hover */
-    header .fix .manu-bar ul li a:hover{
-        color: #48DBFB;
-        background-color: #fff;
-    }
-    /* befor */
-header .fix .manu-bar ul li a::before {
-        content: "";
-        position: absolute;
-        top: 36px;
-        left: 20px;
-        height: 4px;
-        width: 0%;
-        background: black;
-        transition: .5s;
-    }
-    header .fix .manu-bar ul li a:hover::before{
-        width: 70%;
-    }
-    /* header-part close */
-    /* banner part css */
-    .banner{
-    padding: 100px 0px;
-    background: #48DBFB;
-    margin-top: 5px;
-}
-.banner .fix .bgan {
-    color: white;
-    font-size: 18px;
-    font-weight: bolder;
-    padding-bottom: 13px;
-    display: inline-block;
-}
-    .banner .fix h2{
-        font-weight: 700;
-        color: white;
-        font-size: 45px;
-        padding-bottom: 30px;
-    }
-    .banner .fix .btn{}
-    .banner .fix .btn{
-    width: 15%;
-    margin: auto;
-    background: white;
-    padding: 16px 5px;
-    color: #ddd;
-    border-radius: 10px;
-    position: relative;
-    z-index: 1;
-    font-size: 20px;
-}
-.banner .fix .btn::before{
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    background: #000;
-    height: 100%;
-    width: 0%;
-    transition: .5s;
-    z-index: -99;
-    
-}
-.banner .fix .btn:hover::before{
-    width: 100%;
-}
-.banner .fix .btn .b_icon{}
-.banner .fix .btn .B_contant{}
-/* contan */
-.contan{
-    padding: 120px 10px;
-}
-.contan .fix .about_contant{}
-.contan .fix .about_contant h2{
-    color: black;
-    font-weight: 900;
-    font-family: emoji;
-}
-.contan .fix .about_contant p{
-    font-size: 14px;
-    color: #4f4f4f;
-}
-/* banner_img */
-.banner_img{
-    margin-bottom: 60px;
-}
-.banner_img .banner_img_box{}
-.banner_img .banner_img_box{
-    height: 400px;
-    width: 100%;
-}
-.banner_img .banner_img_box .banner-img{
-    display: inline-block;
-    width: 18%;
-    /* border: 1px solid black; */
-    padding: 10px 10px;
-    overflow: hidden;
-    margin-bottom: 10px;
-}
-.banner_img .banner_img_box .banner-img img{
-    transition: .5s;
-    
-}
-/* hover-part */
-.one:hover{
-    transform: rotate(360deg);
-}
-.two:hover{
-    transform: rotate(45deg) scale(1.4);
-}
-.three:hover{
-    transform: rotate(-35deg);
-}
-.fore:hover{
-    transform: rotate(-35deg);
-}
-.five {
-    height: 185px;
-    width: 250px;
-}
-.five:hover{
-    transform: rotate(-35deg)
-}
-.six:hover{
-    transform: rotate(35deg)
-}
-.seven:hover{
-    transform: rotate(360deg);
-}
-.eight:hover{
-    transform: scale(1.3);
-}
-.nine:hover{
-    transform: scale(1.4);
-}
-.ten:hover{
-    transform: rotate(360deg) scale(1.5);
-}
-/* mid_contant */
-.mid_contant{
-    padding-top: 60px;
-}
-.mid_contant .fix h3{
-    font-size: 45px;
-    font-weight: 500;
-    padding-bottom: 28px;
-}
-.mid_contant .fix p{
-    width: 80%;
-    margin: auto;
-    color: #65666a;
-}
-/* position part */
-.position_part{
-    padding: 100px 0px;
-   
-}
-.position_part .box{
-    display: inline-block;
-    
-   
-    
-}
-.position_part .box span{
-    display: inline-block;
-    padding: 17px 60px;
-    background: black;
-    color: white;
-    transition: .5s;
-    font-size: 20px;
+img {
+    max-height: 100%;
 }
 
-.a{
-transform: rotate(-45deg);
+/* costom code */
+header {
+    background-color: #101446;
+    min-height: 82px;
+    padding: 10px 0px 0px 0px;
 }
-.a{
-position: relative;
-top: 0px;
-right: -14%;
-transition: .5s;
-}
-.a:hover{
-    transform: rotate(0deg);
-}
-.a span:hover{
-    color: black;
-    background: #48DBFB;
-    
-}
-.b{
-position: relative;
-top: 0px;
-right: -33%;
-transition: .5s;
 
+/* logo part css */
+.header-logo {
+    height: 60px;
 }
-.b:hover{
-    transform: scale(1.3);
-    
+
+.header-logo img {}
+
+/* manu-bar part css  */
+.manu-bar {
+    text-align: right;
 }
-.b span:hover{
-    color: black;
-    background: #48DBFB;
-    
+
+.manu-bar ul {
+    list-style: none;
 }
-.c{
-position: relative;
-top: 0px;
-left: 59%;
-transform: rotate(45deg);
-transition: .5s;
+
+.manu-bar ul li {
+    display: inline-block;
 }
-.c:hover{
-    transform: rotate(0deg);
+
+.manu-bar ul li a {
+    text-decoration: none;
+    color: white;
+    padding: 0px 15px;
+    line-height: 59px;
+    transition: .3s;
 }
-.c span:hover{
-    color: black;
-    background: #48DBFB;
-    
+
+.manu-bar ul li a:hover {
+    color: gold;
 }
-footer{
-    background: #2E2F31;
-    padding: 30px 0px;
+
+/* banner part css */
+.banner-part {
+    background-image: url(https://i.ibb.co/z8Mzfsp/intro-bg.jpg);
+    padding: 300px 0px;
+    background-size: cover;
     text-align: center;
+    background-position: 10%;
 }
-footer h4{
+
+.banner-contant {}
+
+.banner-contant h3 {
     color: white;
 }
-footer h4 span{
+
+.banner-contant h3 span {
     color: orange;
+}
+
+.banner-contant p {
+    color: white;
+    font-weight: 500;
+    margin: 20px 0px 0px 0px;
+}
+
+.banner-contant a {
+    color: white;
+    background: #337AB7;
+    display: inline-block;
+    padding: 11px 25px;
+    margin-top: 40px;
+    border-radius: 5px;
+    text-decoration: none;
     font-size: 20px;
+    transition: .5s;
+}
+
+.banner-contant a:hover {
+    color: black;
+    background-color: white;
+}
+
+/* teem section css */
+.our-teem {
+    padding: 80px 0px;
+    background: #BAC1F3;
+}
+
+.teem-heading {
+    padding: 30px 0px;
+}
+
+.teem-heading h3 {
+    font-weight: 400;
+    word-spacing: 27px;
+}
+
+.teem-item {}
+
+.teem-item img {}
+
+.teem-item p {
+    width: 60%;
+    margin-left: 70px;
+}
+
+.teem-item a {
+    display: inline-block;
+    color: white;
+    background: #337AB7;
+    padding: 12px 30px;
+    border-radius: 5px;
+    margin-top: 15px;
+    text-decoration: none;
+}
+
+/* info section */
+.About-section {
+    background-color: #C2D4EA;
+    padding-top: 90px;
+    padding-bottom: 60px;
+    /* padding-bottom: 58px; */
+}
+
+.oo {
+    width: 100%;
+}
+
+.About-heading {
+    padding: 30px 0px;
+}
+
+.About-heading h2 {
+
+    padding: 0px 0px 59px 0px;
+}
+
+.about-me {}
+
+.about-me h3 {
+    font-size: 45px;
+    color: #643717;
+    padding-top: 30px;
+}
+
+.about-me p {
+    font-size: 10px;
+    color: #7c8389;
+}
+
+.contuct-us {
+    background-color: #F5F5F5;
+}
+
+input {
+    width: 100%;
+    border-radius: 5px;
+    border: none;
+    padding: 10px;
+}
+
+.btn-o {
+    width: 20%;
+}
+
+.btn-o input {
+    display: inline-block;
+    background-color: #5BC0DE;
+    color: white;
+}
+
+footer {
+    background-color: #0062D3;
+    color: white;
+    font-weight: bold;
+}
+
+.name {
+    color: orange;
+    font-weight: bolder;
 }
